--- a/settings/config.json
+++ b/settings/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "!",
   "intents": [],
-  "token": "MTEzMzQ1OTE4OTIzMDk5MzQxOA.G4ntrs.xbp0UZ5xpL-EDYBPRHrDZZ1Zze3rQ388NFIIqU",
+  "token": "",
   "sync_commands_globally": true
 }
