--- a/settings/config.json
+++ b/settings/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "!",
   "intents": [],
-  "token": "MTEzMzQ1OTE4OTIzMDk5MzQxOA.G7kAM9.6rOQDoIIS6g6YJGhbpnJ_9A2C5I24P8DOpnt3A",
+  "token": "testkey",
   "sync_commands_globally": true
 }
